Add setting to specify driver plugins